--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,34 @@
-# Logs
-logs
+# macOS
+.DS_Store
+
+# node_modules directory
+node_modules/
+
+# npm package locks
+package-lock.json
+yarn.lock
+
+# Environment variables
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# build output
+build/
+dist/
+
+# IDE and editor files
+.idea/
+.vscode/
+*.code-workspace
+
+# logs and caches
+logs/
+cache/
+
+# misc
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
